src/styles/form.css
/* Removing browser preset for input tags */
input:-webkit-autofill,
input:-webkit-autofill:hover, 
input:-webkit-autofill:focus, 
input:-webkit-autofill:active{
    -webkit-background-clip: text;
    -webkit-box-shadow: 0 0 0 30px white inset !important;
}

/* container for login and signup */
.form-content {
    width: 100%;
    margin-inline: auto;
    color: var(--clr-dark);
}

.form-content a {
    color: var(--clr-dark);
}

.form-logo {
    font-family: 'Young Serif', serif;
    width: fit-content;
    margin-inline: auto;
    margin-block-end: 3em;
}

.form-logo:hover {
    opacity: 0.8;
}

.form-logo h1 {
    padding-inline: 1em;
    padding-block: 0.5em;
    font-size: var(--fs-200);
    font-weight: 500;
    color: var(--clr-light);
    background-color: var(--clr-primary);
    border-radius: 5px;
}

/*************************/
/*************************/
/* Auth & Publish Card Form Style ******/
/*************************/
/*************************/

.auth-form {
    padding-inline: 4rem;
    padding-block: 3rem;
}

.form-title h2 {
    color: var(--clr-dark);
    text-align: center;
    font-weight: 400;
}

.form-element {
    width: 29.5rem;
}

.form-element label,
.form-element > p {
    color: var(--clr-dark);
    display: block;
}

.form-element input,
.form-element textarea,
.form-element select
{
    width: 100%;
    padding: 1rem;
    background-color: #fff;
    color: var(--clr-dark);
    border-radius: 5px;
    /* font-size: var(--input-text); */
    font-size: 14px;
    border: 1px solid var(--clr-grey);
}
/* 
.form-element input {
    font-size: var(--input-text);
} */

.form-element textarea {
    min-height: 5rem;
}

.form-element *::placeholder {
    color: var( --clr-grey);
}

.form-element *:focus::placeholder {
    opacity: 0;
}

.form-element *:focus {
    padding: calc(var(--size-1) - 1px) !important;
    border: 2px solid rgb(103, 152, 180, 0.7) !important;
}

.edit-form {
    margin-block: 1.5rem;
    display: flex;
    flex-direction: column;
    gap: 1.5rem;
}

.edit-form .form-element input,
.edit-form .form-element textarea { 
    padding: 0.5rem 1rem;
}

.edit-form .form-element select { 
    padding: 0.5rem 1rem;
    line-height: 1.6;
}

.edit-form .form-element select:focus {
    padding: calc(0.5rem - 1px) calc(1rem - 1px) !important;
    border: 2px solid rgb(103, 152, 180, 0.7) !important;
}

.edit-form .form-element input:focus,
.edit-form .form-element textarea:focus {
    padding: calc(0.5rem - 1px) calc(1rem - 1px) !important;
    border: 2px solid rgb(103, 152, 180, 0.7) !important;
}

.edit-option {
    flex-basis: 0;
    flex-grow: 1;
} 

.status {
    padding: 1rem;
    background-color: #fff;
    border-radius: 5px;
    border: 1px solid var(--clr-grey);
}

.status label {
    padding-block-end: 0;
}

.status input {
   flex-basis: 0;
}

.login-password-wrapper  {
    display: flex;
    background-color: #fff;
    border: 1px solid var(--clr-grey);
    border-radius: 5px;
}

.login-password-wrapper:focus-within {
    border: 2px solid rgb(103, 152, 180, 0.7) !important;
}

.login-password-wrapper #password  {
    border: none;
}

/* Login password error handling */
.login-password-wrapper #password:focus { 
    border: none !important;
}

.login-password-wrapper.border-danger #password {
    padding: calc(var(--size-1) - 1px) !important;
}

.password-outer {
    border: 1px solid transparent;
    border-radius: 5px;
}

.login-password-wrapper .password-btn:active {
    -webkit-tap-highlight-color: rgba(0,0,0,0);
}

.show-password {
    width:  42px;
    text-align: center;
    background-color: #fff;
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
    display: inline-block;
}

input#password {
    display: inline-block;
    width: 250px;
}

.show-icon,
.hide-icon {
    width: 30px !important;
    /* padding: 7px; */
    margin: auto;
    fill: rgb(219, 219, 219);
    /* padding: 8px; */
}

.login-password-wrapper i {
    font-size: var(--fs-175);
    color: #c9c9c9;
}

.form-submit {
    display: flex;
    justify-content: space-between;
    margin-block-start: 1rem;
}

.link {
    font-size: var(--fs-125);
    min-width: 13rem;
    text-align: center;
}

.show-error-message {
    margin-inline: 4rem;
    margin-block-start: 2rem;
    padding: 1rem;
    border: 1px solid var(--clr-danger);
    border-radius: 5px;
    background-color: rgba(220, 53, 69, 0.1);
}

.show-error-message * {
    color: var(--clr-danger);
}

.show-success-message {
    margin-inline: 4rem;
    margin-block-start: 2rem;
    padding: 1rem;
    border: 1px solid var(--clr-success);
    border-radius: 5px;
    background-color: rgba(34, 170, 68, 0.1);
}

.show-success-message * {
    color: var(--clr-primary);
}

.auth-message-title {
    padding-block-end: 0.5rem;
    margin-block-end: 0.5rem;
    text-align: center;
    font-weight: 400;
}

/* Signup requirements card */
.form-element input + .requirements-container {
    max-height: 0; 
    overflow: hidden;
    transition: max-height 0.4s ease-out;
    transition-delay: 0.1s;
}

.form-element input:invalid + .requirements-container {
    max-height: 20rem;
    transition:max-height 0.3s ease-in;
    transition-delay:  0.2s;
}

.form-element input + .requirements-container .requirements-wrapper {
    margin-block: var(--size-2);
    border: 1px solid var(--clr-grey);
    background-color: rgba(224, 203, 205, 0.1);
    color: rgb(27, 47, 65, 0.7);
    padding-inline: 1rem;
    padding-block: 0.8rem;
    border-radius: 5px;
}

.requirements-message p {
    line-height: 1.8;
    display: flex;
    align-items: center;
    color: var(--clr-surface) !important;
}

.empty-field {
    color: var(--clr-danger);
}

/*************************/
/*************************/
/* Search API &     ******/
/* Search Store     ******/
/* Search Catalog   ******/
/*************************/
/*************************/

#archive-form,
#collection-form { 
    position: relative;
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 5rem;
    width: 100%;
    max-width: clamp(20rem, 100%, 60rem) !important;
    margin: 0 auto;
}

input#archive,
input#collection {
    border: 1px solid var(--clr-grey);
    width: 100%;
    padding: var(--size-1);
    margin-inline: auto;
}

.save-to-collection span {
    font-size: 1.3rem;
}

/* Catalog form style */
#search-catalog-form {
    position: absolute;
    top: 0;
    left: 0;
    width: 0;
    padding-block: 0.5rem;
    background-color: var(--clr-primary);
    z-index: 2000;
    transition: 0.2s ease-in;
}

.d-searchbar {
    width: calc(100% - 5rem) !important;
}

#catalog-form {
    display: flex;
    justify-content: space-between;
    width: calc(100% - var(--size-1));
    min-height: var(--size-4);
    padding-block: 0.5rem;
    margin-left: auto;
    background-color: #fff;
    border-radius: 5px;
}

.catalog-input-spinner {
    right: 1rem;
}

.search-catalog-input {
    display: block;
    width: calc(100% - var(--size-1));
    margin-left: auto;
    border-radius: 5px;
    color: var(--clr-dark);
    font-size: var(--input-text);
}

.search-input {  
    border-radius: 5px;
    color: var(--clr-dark);
    font-size: var(--input-text);
}

input#collection:focus,
input#archive:focus {
    padding: calc(var(--size-1) - 1px) !important;
    border: 2px solid rgb(103, 152, 180, 0.7) !important;
}

.search-input::placeholder { 
    font-size: var(--fs-150);
}

/* AUTOCOMPLETE */
.autocomplete-list {
    position: absolute;
    width: calc(100% - var(--size-1));
    max-height: 40vh;
    top: 5rem;
    left: var(--size-1);
    overflow: auto;
    background: #fff;
    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
    border-radius: 5px;
    z-index: 3000;
  }

  .prediction {
    padding: 0.8em;
    color:  var(--clr-dark);
  }

  .prediction * {
    pointer-events: none;
  }

  .prediction:hover {
    cursor: pointer;
  }
  
  .delete-card-content {
    margin-block-start: 5rem;
    padding: 2rem;
    min-height: 48rem;
    min-width: calc(100vw - 4rem);
    border: 1px solid var(--clr-grey);
    border-radius: var(--size-1); 
    background: var(--clr-light);
}

  .card-section {
    width: 50%;
    position: relative;
    display: flex;
    flex-basis: 0;
    flex-grow: 1;
  }

  .card-section:nth-of-type(2) {
    display: flex;
  }

  .lazy-load {
    width: 100%;
  }

  .card-image {
    width: 100%;
    height: 100%;
    vertical-align: middle;
  }

  .card-image:hover {
    cursor: pointer;
  }

.card-footer {
    margin-block-start: var(--size-1);
    border-radius: 5px;
}

.card-quantity {
    width: 6rem;
    border: 1px solid black;
}












  

